--- a/app/views/grams/new.html.erb
+++ b/app/views/grams/new.html.erb
@@ -1,5 +1,6 @@
 <H1>New Gram</H1>
 <%= simple_form_for @gram do |f| %>
   <%= f.input :message %>
+  <%= f.input :picture %>
   <%= f.submit "Post!" %>
 <% end %> 
