--- a/app/views/grams/index.html.erb
+++ b/app/views/grams/index.html.erb
@@ -7,11 +7,13 @@
       <%= gram.message %>
     </p>
 
-    <div class="gram-actions float-right">
+    <div class="gram-actions">
+      <div class="float-right">
       <% if current_user && current_user == gram.user %>
         <%= link_to 'Edit', edit_gram_path(gram) %>
         <%= link_to 'Destroy', gram_path(gram), method: :delete, data: {confirm: 'Are you sure?'} %>
       <% end %>
+    </div>
     </div>
     <br class="clear-fix" />
     <div class="comments">
